- Add bootstrap gem to app and create basic static pages. - Add additional files to gitignore. - Add rspec format file. - Create application helper for page title. - Update readme.

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,12 @@
 !/log/.keep
 /tmp
 
-config/database.yml
-config/secrets.yml
+# Ignore locally setup files
+/config/database.yml
+/config/secrets.yml
+
+# Ignore local files not needed in repo
+*.swp
+.DS_Store
+.rvmrc
+.ruby-version
